Major update: The layout of the webpage has been redesigned. The new interface:   - shows a navigation sider when the user had logged in   - the navigation sider is collapsable   - the navigation sider is responsive   - the navigation sider will be replaced by a buttion, which will summon the menu onlick, when the screen size is too small   - the login and logout is no longer in dropdown menu. They are replaced by a single clickable icon for ease of use   - the routing has been updated accordingly

--- a/merchant-insight-react/src/styles/App.css
+++ b/merchant-insight-react/src/styles/App.css
@@ -5,7 +5,16 @@
 @import 'Header.css';
 
 .App {
-    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB',
+    'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-weight: normal;
+}
+
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 .header-wrapper {
@@ -20,20 +29,11 @@
 }
 
 .App-header {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    background-color: #222;
-    height: 6vw;
-    color: white;
+
 }
 
 .App-title {
-    font-size: 3vw;
-    padding-top: 1vw;
-    padding-left: 0.5vw;
-    color: #ffffff;
-    font-family: "Times New Roman", Times, serif;
+
 
 }
 
@@ -45,6 +45,14 @@
 
 .mainPage {
     margin-top: 2vw;
+}
+
+#components-layout-demo-top-side-2 .logo {
+    width: 120px;
+    height: 31px;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 16px 28px 16px 0;
+    float: left;
 }
 
 
